<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/game_activity_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="270dp" />

    <View
        android:id="@+id/game_activity_emptyview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/game_activity_viewpager"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/game_activity_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_activity_viewpager"
        android:layout_toLeftOf="@id/game_activity_emptyview"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/game_activity_radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dartboard_multiplier_x1" 
            android:checked="true"/>

        <RadioButton
            android:id="@+id/game_activity_radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dartboard_multiplier_x2" />

        <RadioButton
            android:id="@+id/game_activity_radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dartboard_multiplier_x3" />

        <RadioButton
            android:id="@+id/game_activity_radio_bull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dartboard_bull_button" />

        <RadioButton
            android:id="@+id/game_activity_radio_bullseye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dartboard_bullseye_button" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@id/game_activity_radiogroup"
        android:layout_below="@id/game_activity_viewpager"
        android:layout_toRightOf="@id/game_activity_emptyview" >

        <TextView
            android:id="@+id/game_activity_points_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:textSize="26dp" />

        <Button
            android:id="@+id/game_activity_add_button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/dartboard_addresult"
            android:textSize="22dp" />
    </RelativeLayout>

</RelativeLayout>