<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/main_activity_newgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/main_activity_startnew_button" />

    <Button
        android:id="@+id/main_activity_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_newgame_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/main_activity_continue_button" />

    <Button
        android:id="@+id/main_activity_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_continue_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/main_activity_settings_button" />

</RelativeLayout>